@@ -6,6 +6,6 @@ The files:
 	dwarfdump are copyrighted according to the file
 	DWARFDUMPCOPYRIGHT.   
 
-$Source: /isms/cmplrs.src/osprey1.0/dwarfdump/RCS/COPYING,v $
+$Source: /hosts/bonnie.engr/disks/xlv2/cmplrs.src/osprey1.0/dwarfdump/RCS/COPYING,v $
 $Revision: 1.1 $
 $Date: 1999/03/05 21:31:58 $
