@@ -14,6 +14,6 @@ in the accompanying libdwarf directory
 
 David Anderson.  davea@sgi.com
 
-$Source: /isms/cmplrs.src/osprey1.0/dwarfdump/RCS/README,v $
+$Source: /hosts/bonnie.engr/disks/xlv2/cmplrs.src/osprey1.0/dwarfdump/RCS/README,v $
 $Revision: 1.2 $
 $Date: 1999/06/22 16:33:17 $
