@@ -30,7 +30,7 @@
   http://oss.sgi.com/projects/GenInfo/NoticeExplan
 
 
-$Header: /isms/cmplrs.src/osprey1.0/dwarfdump/RCS/dwarfdump.c,v 1.37 2000/04/17 22:00:07 davea Exp $ */
+$Header: /hosts/bonnie.engr/disks/xlv2/cmplrs.src/osprey1.0/dwarfdump/RCS/dwarfdump.c,v 1.36 2000/04/10 19:10:35 davea Exp $ */
 #include "globals.h"
 
 /* for 'open' */
