@@ -32,8 +32,8 @@
   http://oss.sgi.com/projects/GenInfo/NoticeExplan
 
 	makename.h   
-	$Revision: 1.4 $
-	$Date: 2000/04/17 22:00:07 $
+	$Revision: 1.3 $
+	$Date: 2000/04/10 20:59:57 $
 
 	This is for putting strings into stable storage.
 
