@@ -26,6 +26,6 @@ The libdwarf documentation:
 	These documents are substantial revisions, done at SGI, of
 	previous libdwarf work.  
 
-$Source: /isms/cmplrs.src/osprey1.0/libdwarf/RCS/COPYING,v $
+$Source: /hosts/bonnie.engr/disks/xlv2/cmplrs.src/v7.4/libdwarf/RCS/COPYING,v $
 $Revision: 1.1 $
 $Date: 1994/06/09 15:53:33 $
