@@ -7,7 +7,7 @@
 % Copyright (c) 1985,1987 Adobe Systems Incorporated. All Rights Reserved. 
 % GOVERNMENT END USERS: See Notice file in TranScript library directory
 % -- probably /usr/lib/ps/Notice
-% RCS: $Header: /isms/cmplrs.src/osprey1.0/libdwarf/RCS/index.v2.ps,v 1.1 1994/06/09 19:47:28 davea Exp $
+% RCS: $Header: /hosts/bonnie.engr/disks/xlv2/cmplrs.src/v7.4/libdwarf/RCS/index.v2.ps,v 1.1 1994/06/09 19:47:28 davea Exp $
 /$DITroff 140 dict def $DITroff begin
 /fontnum 1 def /fontsize 10 def /fontheight 10 def /fontslant 0 def
 /xi {0 72 11 mul translate 72 resolution div dup neg scale 0 0 moveto
