@@ -1,13 +1,14 @@
 April 15, 2000
-
   The libdwarf copyright has changed to
      version 2.1 of the GNU Lesser General Public License.
   Anyone holding a version of libdwarf that was published
-              before this new copyright 
-  is allowed to use the
-  copyright published in that version of the libdwarf source or
-  to use this new copyright on the older source, at their
-  option.
+  before this new copyright is allowed to use
+    the copyright published in that earlier libdwarf source
+    on the earlier source
+  or to use 
+    this new copyright on the earlier source,
+  at their option.
+
 
 December 08, 1999
   The dwarf committee has adopted the offset-extension
